log
Thu 14 Sep 2023 12:59:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: expected expression before ‘TreeMap’
   45 |   return nextTreeMap(TreeMap *tree);
      |                      ^~~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
01e0fd0
Thu 14 Sep 2023 12:59:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
e8489dd
Thu 14 Sep 2023 01:00:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c625756
Thu 14 Sep 2023 01:14:31 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|7
total_score: 5/70
965d636
Thu 14 Sep 2023 01:19:31 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
7325ba4
